--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
     <Header>
-        <div></div>
+        <div>
+            <h1>Lorem.</h1>
+            <nav></nav>
+        </div>
     </Header>
 
     <main>
